[project]
name = "cadastro"
version = "0.1.0"
description = ""
authors = [
    {name = "Kleber Correa",email = "kleberekette@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
